Fix logo size after cropping and make clicking it return home

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -142,7 +142,7 @@ img{
 }
 .logo img{
     vertical-align:top;
-    width: 300px;
+    width: 100px;
 }
 
 .main-navigation{
